fixed icons and section in interactive video

--- a/content/services/interactive-video-experiences/index.html
+++ b/content/services/interactive-video-experiences/index.html
@@ -52,7 +52,7 @@ banner_image: interactive-video-experiences.png
         <div class="grid mb">
             <div class="grid-item 1/1 lg-1/12">
             </div>
-            <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
+            <div class="grid-item 1/1 lg-2/3 mb">
                 <h2>Use cases of interactive video</h2>
             </div>
         </div>
@@ -60,10 +60,10 @@ banner_image: interactive-video-experiences.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img src="full-screen-web-applications.svg"/>
+                <img class="mb" src="full-screen-web-applications.svg"/>
             </div>
-            <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h3>Change how we learn</h3>
+            <div class="grid-item 1/1 lg-2/3 mb">
+                <h3 class="mt0">Change how we learn</h3>
                 <p>Transform video learning into a participatory experience that can be personalised based on the needs of a learner.</p>
             </div>
         </div>
@@ -71,10 +71,10 @@ banner_image: interactive-video-experiences.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img src="multi-screen.svg"/>
+                <img class="mb" src="multi-screen.svg"/>
             </div>
-            <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h3>Transform music performances</h3>
+            <div class="grid-item 1/1 lg-2/3 mb">
+                <h3 class="mt0">Transform music performances</h3>
                 <p>Hand over the reigns to your audience. Let them watch from backstage or the mosh pit, single out a vocal or switch tracks.</p>
             </div>
         </div>
@@ -82,10 +82,10 @@ banner_image: interactive-video-experiences.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img src="stress-free.svg"/>
+                <img class="mb" src="stress-free.svg"/>
             </div>
-            <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h3>Gamify your story</h3>
+            <div class="grid-item 1/1 lg-2/3 mb">
+                <h3 class="mt0">Gamify your story</h3>
                 <p>Let your audience fight alongside the hero or choose their own path. Inject a thrilling sense of jeopardy with interactive triggers and content, blended seamlessly with high-quality video.</p>
             </div>
         </div>
@@ -93,10 +93,10 @@ banner_image: interactive-video-experiences.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img src="stress-free.svg"/>
+                <img class="mb" src="stress-free.svg"/>
             </div>
-            <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h3>Let your audience buy what they see</h3>
+            <div class="grid-item 1/1 lg-2/3 mb">
+                <h3 class="mt0">Let your audience buy what they see</h3>
                 <p>Use interactive video to drive direct sales by allowing users to buy what is shown.</p>
             </div>
         </div>
