--- a/content/services/strategic-ux-consultancy/index.html
+++ b/content/services/strategic-ux-consultancy/index.html
@@ -46,7 +46,7 @@ banner_image: strategic-ux-consultancy.png
         <div class="grid-item 1/1 lg-1/3">
             <p>
                 <img src="tick.svg">
-                <span>identify user requirements</span>
+                <span>Identify user requirements</span>
                 <br>
                 <img src="tick.svg">
                 <span>Summarise your business model and current operating plan</span>
