fixed some content spacing

--- a/content/services/audience-research/index.html
+++ b/content/services/audience-research/index.html
@@ -83,10 +83,10 @@ banner_image: audience-research.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img src="presentation.svg"/>
+            <img class="mb" src="presentation.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-            <h3>Depth interviews</h3>
+            <h3 class="mt0">Depth interviews</h3>
             <p>Conducting face-to-face depth interviews is a highly effective way of gaining an understanding of your audience’s goals, motivations and behaviours. Interviews are carefully scripted and usually run with 10 or more participants who fit your target audience’s profile.</p>
         </div>
     </div>
@@ -94,10 +94,10 @@ banner_image: audience-research.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img src="multi-screen.svg"/>
+            <img class="mb" src="multi-screen.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-            <h3>Focus groups</h3>
+            <h3 class="mt0">Focus groups</h3>
             <p>Focus groups are a great way of finding out about the beliefs, attitudes and aspirations of the audience you are designing for. These moderated discussions enable a quick and valuable understanding of the expectations and experiences of your targeted group of individuals.</p>
         </div>
     </div>
@@ -105,10 +105,10 @@ banner_image: audience-research.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img src="change-the-story.svg"/>
+            <img class="mb" src="change-the-story.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-            <h3>Card sorting</h3>
+            <h3 class="mt0">Card sorting</h3>
             <p>Often incorporated into depth interviews, card sorting is a simple method that helps evaluate what matters the most to your audience. Participants organise and rank topics written on cards into categories in a way that makes sense to them. This enables our information architects to identify and prioritise the display of information in your product or service.</p>
         </div>
     </div>
