--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -122,10 +122,10 @@ banner_image: interactive-display-screens.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img src="full-screen-web-applications.svg"/>
+                <img class="mb" src="full-screen-web-applications.svg"/>
             </div>
             <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h3>Full screen web application</h3>
+                <h3 class="mt0">Full screen web application</h3>
                 <p>From slideshows to interactive maps, video walls to weather reports. Easily create rich multimedia presentations at a moment’s notice.</p>
             </div>
         </div>
@@ -133,10 +133,10 @@ banner_image: interactive-display-screens.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img src="multi-screen.svg"/>
+                <img class="mb" src="multi-screen.svg"/>
             </div>
             <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h3>Multiscreen arrangements</h3>
+                <h3 class="mt0">Multiscreen arrangements</h3>
                 <p>Easily add or remove text, images, video, rich multimedia, social media and data to tell deliver your message clearly.</p>
             </div>
         </div>
@@ -144,10 +144,10 @@ banner_image: interactive-display-screens.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img src="stress-free.svg"/>
+                <img class="mb" src="stress-free.svg"/>
             </div>
             <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-                <h3>A stress-free interface</h3>
+                <h3 class="mt0">A stress-free interface</h3>
                 <p>Call up immersive graphics and real time data on the fly, controlling the flow of information during a live broadcast.</p>
             </div>
         </div>
