--- a/content/services/strategic-ux-consultancy/index.html
+++ b/content/services/strategic-ux-consultancy/index.html
@@ -105,10 +105,10 @@ banner_image: strategic-ux-consultancy.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img src="presentation.svg"/>
+            <img class="mb" src="presentation.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-            <h3>1. A clear view of where you are</h3>
+            <h3 class="mt0">1. A clear view of where you are</h3>
             <p>In order to take your product or service forward, you need to know where you are to begin with. We’ll kick things off by gathering information about your business and users.</p>
         </div>
     </div>
@@ -116,10 +116,10 @@ banner_image: strategic-ux-consultancy.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img src="multi-screen.svg"/>
+            <img class="mb" src="multi-screen.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-            <h3>2. Establishing your vision</h3>
+            <h3 class="mt0">2. Establishing your vision</h3>
             <p>Next it’s time to work out where you want to be. Armed with the information we’ve gathered, we brainstorm and prioritise strategies that have a measurable impact on your business.</p>
         </div>
     </div>
@@ -127,10 +127,10 @@ banner_image: strategic-ux-consultancy.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img src="change-the-story.svg"/>
+            <img class="mb" src="change-the-story.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-            <h3>3. Get the job done</h3>
+            <h3 class="mt0">3. Get the job done</h3>
             <p>With a clear road map of who does what and when, it’s time to roll up our sleeves and implement your vision. Our strategists and designers work with you to develop your goals into a tangible product (or service) to deliver the business outcomes you are targeting.</p>
         </div>
     </div>
@@ -138,10 +138,10 @@ banner_image: strategic-ux-consultancy.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img src="change-the-story.svg"/>
+            <img class="mb" src="change-the-story.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
-            <h3>4. Time to respond</h3>
+            <h3 class="mt0">4. Time to respond</h3>
             <p>Once your project is out in the world, we’ll gather metrics and useful feedback to determine its success. With these insights we’ll make any necessary improvements before tackling the next objective.</p>
         </div>
     </div>
