Switched to using ohs-gallery-promos

--- a/content/services/audience-research/index.html
+++ b/content/services/audience-research/index.html
@@ -3,9 +3,9 @@ title: Audience research
 title_long: Audience research for media organisations
 lead: Understand what makes your audience tick.
 description: >
-    Audience research by 100 Shapes provides the foundation for creating products that match your target audience. They allow you to explore the goals and behaviours of existing and potential users to gain a true understanding of what motivates them. Audience research is key in the development of personae which then help us make informed decisions when shaping your product, service or campaign.
+Audience research by 100 Shapes provides the foundation for creating products that match your target audience. They allow you to explore the goals and behaviours of existing and potential users to gain a true understanding of what motivates them. Audience research is key in the development of personae which then help us make informed decisions when shaping your product, service or campaign.
 intro: >
-    Our Audience research methods provide the foundation for creating products that match your target audience. They allow you to explore the goals and behaviours of existing and potential users to gain a true understanding of what motivates them. Audience research is key in the development of personae which then help us make informed decisions when shaping your product, service or campaign.
+Our Audience research methods provide the foundation for creating products that match your target audience. They allow you to explore the goals and behaviours of existing and potential users to gain a true understanding of what motivates them. Audience research is key in the development of personae which then help us make informed decisions when shaping your product, service or campaign.
 
 square_image: audience-research-square.png
 banner_image: audience-research.png
@@ -133,13 +133,12 @@ banner_image: audience-research.png
         </div>
     </div>
 </div>
-<div class="wrapper wrapper-full-bleed">
-    <img src="case-study-london-live.png">
-    <div class="tc">
-        <span>Case Study</span>
-        <h2 class="mt0">London Live</h2>
-    </div>
-</div>
+
+
+<ohs-gallery-item-promo title="London Live"
+                        background-image-url="http://api.100shapes.com/services/interactive-audience-research/case-study-london-live.png">
+</ohs-gallery-item-promo>
+
 <div class="wrapper">
     <div class="grid mb">
         <div class="grid-item 1/1 lg-1/12">
