--- a/content/services/interactive-video-experiences/index.html
+++ b/content/services/interactive-video-experiences/index.html
@@ -195,13 +195,11 @@ banner_image: interactive-video-experiences.png
         </div>
     </div>
 </div>
-<div class="wrapper wrapper-full-bleed">
-    <img src="case-study-footballers-united.png">
-    <div class="tc">
-        <span>Case Study</span>
-        <h2 class="mt0">Footballers Utd</h2>
-    </div>
-</div>
+
+<ohs-gallery-item-promo title="Footballers Utd"
+                        background-image-url="http://api.100shapes.com/services/interactive-video-experiences/case-study-footballers-united.png">
+</ohs-gallery-item-promo>
+
 <div class="wrapper">
     <div class="grid mb">
         <div class="grid-item 1/1 lg-1/12">
