--- a/content/services/strategic-ux-consultancy/index.html
+++ b/content/services/strategic-ux-consultancy/index.html
@@ -166,20 +166,18 @@ banner_image: strategic-ux-consultancy.png
         </div>
     </div>
 </div>
-<div class="wrapper wrapper-full-bleed">
-    <img src="case-study-london-live.png">
-    <div class="tc">
-        <span>Case Study</span>
-        <h2 class="mt0">London Live</h2>
-    </div>
-</div>
+
+<ohs-gallery-item-promo title="London Live"
+                        background-image-url="http://api.100shapes.com/services/interactive-display-screens/case-study-london-live.png">
+</ohs-gallery-item-promo>
+
 <div class="wrapper">
     <div class="grid mb">
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-2/3">
-            <h2>A digital platfrom for London</h2>
-            
+            <h2>A digital broadcast platform for London</h2>
+
             <p>London Live is a British television channel, launched at 6:30pm on 31st March 2014. Combining London news and entertainment, it is broadcast on Freeview channel 8, satellite, cable and online.</p>
 
             <p>When 100 Shapes were commissioned to design the London Live website we assembled a team of user researchers, user experience designers and information architects to deliver the project with a user-centered approach. Up-front in order to identify genuine user needs, we ran an in-depth audience research study with 10 participants based on a target demographic.</p>
