--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -169,13 +169,11 @@ banner_image: interactive-display-screens.png
         </div>
     </div>
 </div>
-<div class="wrapper wrapper-full-bleed">
-    <img src="case-study-london-live.png">
-    <div class="tc">
-        <span>Case Study</span>
-        <h2 class="mt0">London Live</h2>
-    </div>
-</div>
+
+<ohs-gallery-item-promo title="London Live"
+                        background-image-url="http://api.100shapes.com/services/interactive-display-screens/case-study-london-live.png">
+</ohs-gallery-item-promo>
+
 <div class="wrapper">
     <div class="grid mb">
         <div class="grid-item 1/1 lg-1/12">
@@ -199,7 +197,7 @@ banner_image: interactive-display-screens.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-2/3">
-            <h3>Cleverly intergrated</h3>
+            <h3>Cleverly integrated</h3>
             <p>The real-time data is powered by the same systems as London Live’s website, reducing the need for unnecessary editorial amends and ensuring a consistent message across platforms.</p>
             <h3>Intuitive admin</h3>
             <p>Required to display real-time data instantly, the interactive display showcases live news, weather and travel data with minimal set-up. London Live’s presenters use an intuitive admin to quickly set up and create highly visual presentations.</p>
