--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -1,6 +1,6 @@
 ---
 title: Interactive Display Screens
-title_long: Interactive Display Screens for Broadcast
+title_long: Interactive Display Screens for the broadcaster studio
 lead: Showcase dynamic multimedia content and data, live.
 description: >
     Whether you’re broadcasting an in-depth news feature or today’s weather forecast, an interactive display screen is a powerful tool for presenters to communicate your message to audiences on television and online.
