--- a/content/services/interactive-video-experiences/index.html
+++ b/content/services/interactive-video-experiences/index.html
@@ -60,7 +60,7 @@ banner_image: interactive-video-experiences.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img class="mb" src="full-screen-web-applications.svg"/>
+                <img class="mb" src="change-how-we-learn.svg"/>
             </div>
             <div class="grid-item 1/1 lg-2/3 mb">
                 <h3 class="mt0">Change how we learn</h3>
@@ -71,7 +71,7 @@ banner_image: interactive-video-experiences.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img class="mb" src="multi-screen.svg"/>
+                <img class="mb" src="transform-performances.svg"/>
             </div>
             <div class="grid-item 1/1 lg-2/3 mb">
                 <h3 class="mt0">Transform music performances</h3>
@@ -82,7 +82,7 @@ banner_image: interactive-video-experiences.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img class="mb" src="stress-free.svg"/>
+                <img class="mb" src="gamify-your-story.svg"/>
             </div>
             <div class="grid-item 1/1 lg-2/3 mb">
                 <h3 class="mt0">Gamify your story</h3>
