updated index and fixed icon offset

--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -40,12 +40,12 @@ banner_image: interactive-display-screens.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="presentation.svg">
+            <img class="mb ml0" src="presentation.svg">
             <h3>Captivate your audience</h3>
             <p>From slideshows to interactive maps and video walls to weather reports, create rich multimedia presentations at a moment’s notice.</p>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="tell-the-story.svg">
+            <img class="mb ml0" src="tell-the-story.svg">
             <h3>Tell the story you want</h3>
             <p>Easily add or remove text, imagery, video, rich multimedia, social media and data to deliver your message clearly.</p>
         </div>
@@ -54,12 +54,12 @@ banner_image: interactive-display-screens.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="change-the-story.svg">
+            <img class="mb ml0" src="change-the-story.svg">
             <h3>Change the story in real-time</h3>
             <p>Call up immersive graphics and real-time data whilst controlling the flow of information during a live broadcast.</p>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="intuitive-admin.svg">
+            <img class="mb ml0" src="intuitive-admin.svg">
             <h3>Edit with an intuitive Admin</h3>
             <p>Create, edit and save any number of presentations using a simple admin interface accessed via a web application.</p>
         </div>
@@ -214,12 +214,12 @@ banner_image: interactive-display-screens.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="news-headlines.svg">
+            <img class="mb ml0" src="news-headlines.svg">
             <h4>News headlines</h4>
             <p>As text, image, video, rich multimedia, graphics and data.</p>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="social-media.svg">
+            <img class="mb ml0" src="social-media.svg">
             <h4>Social Media</h4>
             <p>Real-time social media, social analytics and audience participation from all the major networks.</p>
         </div>
@@ -228,12 +228,12 @@ banner_image: interactive-display-screens.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="traffic-updates.svg">
+            <img class="mb ml0" src="traffic-updates.svg">
             <h4>Traffic Updates</h4>
             <p>Dynamic updates on road closures, road works and disruptions.</p>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="public-transport.svg">
+            <img class="mb ml0" src="public-transport.svg">
             <h4>Public transport updates</h4>
             <p>Live tube, rail and bus updates.</p>
         </div>
@@ -242,12 +242,12 @@ banner_image: interactive-display-screens.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="weather-forecast.svg">
+            <img class="mb ml0" src="weather-forecast.svg">
             <h4>Weather forecasts</h4>
             <p>Up to 5 day forecasts, supported by graphics, maps and artwork.</p>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="sport.svg">
+            <img class="mb ml0" src="sport.svg">
             <h4>Sport</h4>
             <p>Team and player profiles, match statistics, gallery updates.</p>
         </div>
@@ -256,12 +256,12 @@ banner_image: interactive-display-screens.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="finance.svg">
+            <img class="mb ml0" src="finance.svg">
             <h4>Finance</h4>
             <p>Stock market trends and news.</p>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb" src="maps.svg">
+            <img class="mb ml0" src="maps.svg">
             <h4>Map</h4>
             <p>Location-specific news and listings information that can be explored live on air with the ability to zoom in and out.</p>
         </div>
