--- a/content/services/interactive-video-experiences/index.html
+++ b/content/services/interactive-video-experiences/index.html
@@ -93,7 +93,7 @@ banner_image: interactive-video-experiences.png
             <div class="grid-item 1/1 lg-1/12">
             </div>
             <div class="grid-item 1/1 lg-1/12">
-                <img class="mb" src="stress-free.svg"/>
+                <img class="mb" src="audience-purchase.svg"/>
             </div>
             <div class="grid-item 1/1 lg-2/3 mb">
                 <h3 class="mt0">Let your audience buy what they see</h3>
