added new icons to service page

--- a/content/services/audience-research/index.html
+++ b/content/services/audience-research/index.html
@@ -83,7 +83,7 @@ banner_image: audience-research.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="presentation.svg"/>
+            <img class="mb" src="depth-interviews.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">Depth interviews</h3>
@@ -94,7 +94,7 @@ banner_image: audience-research.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="multi-screen.svg"/>
+            <img class="mb" src="focus-group.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">Focus groups</h3>
@@ -105,7 +105,7 @@ banner_image: audience-research.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="change-the-story.svg"/>
+            <img class="mb" src="card-sorting.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">Card sorting</h3>
