added new icons to service page

--- a/content/services/strategic-ux-consultancy/index.html
+++ b/content/services/strategic-ux-consultancy/index.html
@@ -105,7 +105,7 @@ banner_image: strategic-ux-consultancy.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="presentation.svg"/>
+            <img class="mb" src="clear-view.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">1. A clear view of where you are</h3>
@@ -116,7 +116,7 @@ banner_image: strategic-ux-consultancy.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="multi-screen.svg"/>
+            <img class="mb" src="establishing-vision.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">2. Establishing your vision</h3>
@@ -127,7 +127,7 @@ banner_image: strategic-ux-consultancy.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="change-the-story.svg"/>
+            <img class="mb" src="job-done.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">3. Get the job done</h3>
@@ -138,7 +138,7 @@ banner_image: strategic-ux-consultancy.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="change-the-story.svg"/>
+            <img class="mb" src="time-to-respond.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">4. Time to respond</h3>
