fixed SVG thickness

--- a/content/services/interactive-display-screens/index.html
+++ b/content/services/interactive-display-screens/index.html
@@ -40,7 +40,7 @@ banner_image: interactive-display-screens.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 md-1/2 lg-1/3 mb">
-            <img class="mb ml0" src="presentation.svg">
+            <img class="mb ml0" src="captivate-audience.svg">
             <h3>Captivate your audience</h3>
             <p>From slideshows to interactive maps and video walls to weather reports, create rich multimedia presentations at a moment’s notice.</p>
         </div>
