commented out typeset

--- a/content/services/interactive-video-advertising/index.html
+++ b/content/services/interactive-video-advertising/index.html
@@ -6,9 +6,9 @@ description: >
     Needs this
 intro: >
     interactive video advertising has emerged as one of the most exciting and engaging forms of advertising. Delighting and engaging audiences, it blurs the lines between entertainment, information, gaming and advertising.
-
-square_image:
-banner_image:
+draft: ture
+square_image: interactive-video-advertising.png
+banner_image: interactive-video-advertising-square.png
 ---
 
 <div class="wrapper">
