--- a/content/services/interactive-video-advertising/index.html
+++ b/content/services/interactive-video-advertising/index.html
@@ -6,7 +6,7 @@ description: >
     Needs this
 intro: >
     interactive video advertising has emerged as one of the most exciting and engaging forms of advertising. Delighting and engaging audiences, it blurs the lines between entertainment, information, gaming and advertising.
-draft: ture
+draft: true
 square_image: interactive-video-advertising.png
 banner_image: interactive-video-advertising-square.png
 ---
