added images and artwork

--- a/content/services/interactive-video-advertising/index.html
+++ b/content/services/interactive-video-advertising/index.html
@@ -3,11 +3,11 @@ title: Interactive video advertising
 title_long: Interactive video advertising for media organisations
 lead: Encourage your customers to willingly spend more time with your brand.
 description: >
-    Needs this
+    Interactive videos create immersive, user-driven experiences that link content with marketing and commerce.
 intro: >
     interactive video advertising has emerged as one of the most exciting and engaging forms of advertising. Delighting and engaging audiences, it blurs the lines between entertainment, information, gaming and advertising.
-square_image: interactive-video-advertising.png
-banner_image: interactive-video-advertising-square.png
+square_image: interactive_ads_tile.png
+banner_image: interactive_ads_banner.png
 ---
 
 <div class="wrapper">
