updated, merged and added HE to drafts

--- a/content/services/heuristic-evaluation/index.html
+++ b/content/services/heuristic-evaluation/index.html
@@ -8,6 +8,7 @@ intro: >
     Heuristic evaluation is a cost-effective way to identify common usability problems and quick-wins to improve your digital product.
 square_image: something.png
 banner_image: something.png
+draft: true
 ---
 
 <div class="wrapper">
