added service page icons

--- a/content/services/interactive-video-advertising/index.html
+++ b/content/services/interactive-video-advertising/index.html
@@ -42,7 +42,7 @@ banner_image: interactive_ads_banner.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="image.svg"/>
+            <img class="mb" src="captivate-audience.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">Capture your audience’s attention for longer</h3>
@@ -53,7 +53,7 @@ banner_image: interactive_ads_banner.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="image.svg"/>
+            <img class="mb" src="give-customers-control.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">Give your customers the control</h3>
@@ -64,7 +64,7 @@ banner_image: interactive_ads_banner.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="image.svg"/>
+            <img class="mb" src="learn-from-your-customers.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">Learn from your customers</h3>
@@ -75,7 +75,7 @@ banner_image: interactive_ads_banner.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="image.svg"/>
+            <img class="mb" src="any-device.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">Be available on any device</h3>
@@ -86,7 +86,7 @@ banner_image: interactive_ads_banner.png
         <div class="grid-item 1/1 lg-1/12">
         </div>
         <div class="grid-item 1/1 lg-1/12">
-            <img class="mb" src="image.svg"/>
+            <img class="mb" src="make-it-memorable.svg"/>
         </div>
         <div class="grid-item 1/1 md-1/2 lg-2/3 mb">
             <h3 class="mt0">Make it memorable</h3>
